Ajuste na imagem

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <section class="container">
         <div class="card">
-            <img id="imagem" class="imagem" src="images/illustration-woman-online-mobile.svg" alt="Mulher olhando para um telão">
+            <img id="imagem" class="imagem" src="./images/illustration-woman-online-desktop.svg" alt="Mulher olhando para um telão">
             <img id="detalhe" class="detalhe" src="./images/bg-pattern-mobile.svg" alt="Sombra da imagem">
             <img class="box" src="./images/illustration-box-desktop.svg" alt="Caixa">
 
